# sever-for-ai-ladsharing

./: .env  .gitignore  Cargo.toml  README.md  render.yaml
src/: main.rs
src/db/: postgres.rs
src/models/: tasks.rs
src/routes/: ai.rs  api.rs
src/services/: mod.rs  task_manager.rs  tasks_router.rs
src/utils/: encrypion.rs  mod.rs
static/: config.js  index.html  style.css
