[package]
name = "zephost"
version = "0.1.0"
edition = "2021"
default-run = "zephost"

[dependencies]
actix-web = "4"
dotenvy = "0.15"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"], optional = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }

[features]
worker = ["dep:reqwest"]

[[bin]]
name = "zephost"
path = "src/main.rs"

[[bin]]
name = "worker"
path = "src/bin/worker.rs"
required-features = ["worker"]
