[package]
name = "zephost"
version = "0.1.0"
edition = "2021"
default-run = "zephost"

[dependencies]
actix = "0.13"
actix-web-actors = "4"
actix-web = "4"
dotenvy = "0.15"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4", "serde"] }

[[bin]]
name = "zephost"
path = "src/main.rs"

[[bin]]
name = "worker"
path = "src/bin/worker.rs"
